--- a/templates/core-site.xml
+++ b/templates/core-site.xml
@@ -1,1 +1,1 @@
-<configuration><property><name>fs.default.name</name><value>hdfs://{{ IM_MASTER_FQDN }}:9000</value></property></configuration>
+<configuration><property><name>fs.default.name</name><value>hdfs://{{ hadoop_master }}:9000</value></property></configuration>
